# svc-notifier

./: .dockerignore  .env.test  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  docker-compose.test.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: cd.yml  ci.yml
br-notifier-contract/: CHANGELOG.md  Cargo.toml  README.md
br-notifier-contract/src/: lib.rs
charts/br-svc-notifier/: Chart.yaml  values.yaml
charts/br-svc-notifier/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
crates/br-notifier-contract/: CHANGELOG.md  Cargo.toml  README.md
crates/br-notifier-contract/src/: lib.rs
crates/br-notifier-publisher/: CHANGELOG.md  Cargo.toml  README.md
crates/br-notifier-publisher/src/: error.rs  lib.rs  publisher.rs
crates/br-notifier-publisher/tests/: publish.rs
docs/: domain.md
migrations/: 000001_notifications.sql  0001_notifications.sql
scripts/: init-db.sql  publish.sh  setup-branch-protection.sh
scripts/lib/: build-cross-amd64.sh  build-cross-arm64.sh  build-native-release.sh  check.sh  common.sh  test.sh  validate.sh
src/: db.rs  error.rs  graphql.rs  intake.rs  lib.rs  main.rs  nats.rs  notification.rs  realtime.rs
src/graphql/: mod.rs  mutations.rs  queries.rs  subscriptions.rs  types.rs
tests/: p1_nats_intake.rs  p2_graphql.rs  p3_auth.rs  p4_subscriptions.rs  scenarios_authn.rs  scenarios_intake.rs  scenarios_outage.rs  scenarios_realtime.rs  scenarios_surface.rs
tests/common/: mod.rs
tests/system/: run.sh
