[workspace]
members = ["crates/br-notifier-contract", "crates/br-notifier-publisher"]
default-members = [".", "crates/br-notifier-contract", "crates/br-notifier-publisher"]

[package]
name = "svc-notifier"
version = "1.0.2"
edition = "2024"
publish = false
rust-version = "1.94"
license = "Apache-2.0"
description = "Standalone notification service — NATS intake, GraphQL API, RLS, real-time subscriptions"
repository = "https://github.com/BotResources/svc-notifier"

[dependencies]
br-notifier-contract = { path = "crates/br-notifier-contract" }
br-notifier-publisher = { path = "crates/br-notifier-publisher" }
br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v1.2.0", version = "1.2.0" }
br-util-axum-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-axum-auth", tag = "v1.2.0", version = "1.2.0" }
br-util-axum-readiness = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-axum-readiness", tag = "v1.2.0", version = "1.2.0" }
br-util-graphql = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-graphql", tag = "v1.2.0", version = "1.2.0", features = ["graphql"] }
br-util-nats-fabric = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-nats-fabric", tag = "v1.2.0", version = "1.2.0" }
br-util-observability = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-observability", tag = "v1.2.0", version = "1.2.0" }
br-util-postgres = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-postgres", tag = "v1.2.0", version = "1.2.0" }
async-graphql = { version = "7", features = ["chrono", "uuid"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls", "json", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
br-notifier-contract = { path = "crates/br-notifier-contract" }
br-notifier-publisher = { path = "crates/br-notifier-publisher" }
br-core-auth = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-auth", tag = "v1.2.0", version = "1.2.0", features = ["test-support"] }
br-core-integration = { git = "https://github.com/BotResources/br-rust-common", package = "br-core-integration", tag = "v1.2.0", version = "1.2.0" }
br-util-nats-fabric = { git = "https://github.com/BotResources/br-rust-common", package = "br-util-nats-fabric", tag = "v1.2.0", version = "1.2.0" }
br-test-harness = { git = "https://github.com/BotResources/br-e2e-harness", package = "br-test-harness", tag = "v1.1.2", version = "1.1.2", default-features = false, features = ["passport", "graphql", "sse", "nats-fabric", "spawned-nats"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
serial_test = "3"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "uuid", "chrono", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
