[package]
name = "br-notifier-contract"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "Published language for svc-notifier — typed deliver command, fail-closed RelativeLink, subject constant"
repository = "https://github.com/BotResources/svc-notifier"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
regex = "1"
